# TestNNPython

./: .gitignore  .replit  ai_memory.pkl  ai_player.py  ai_player.py.backup  ai_state.pth  analyze_memory.py  constants.py  constants.py.backup  game_state.py  game_state.py.backup  main.py  main.py.backup  pyproject.toml  renderer.py  renderer.py.backup  verify_memory.py
